--- a/Botines/Adidas_Enfant_Silver.html
+++ b/Botines/Adidas_Enfant_Silver.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Adidas_Enfant_Silver</title>
   
 
@@ -169,7 +170,7 @@
         </div>
         <div class="tile is-child box">
             
-            <p class=" title">DETALLES:</p>
+        <p class=" title">DETALLES:</p>
         <p>Es una excelente camiseta para sacar lo que hay en vos.</p>
         <li>Logo adidas bordado.</li>
         <li>Escudo ajax aplicado.</li>
@@ -303,10 +304,6 @@
             </div>
     
 </div>
-
-</body>
-
-</html>
 
 </body>
 
