--- a/Botines/Adidas_Predator.html
+++ b/Botines/Adidas_Predator.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Adidas_Predator</title>
   
 
@@ -303,10 +304,6 @@
             </div>
     
 </div>
-
-</body>
-
-</html>
 
 </body>
 
