--- a/Botines/Adidas_X_kids.html
+++ b/Botines/Adidas_X_kids.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Adidas_X_kids</title>
   
 
@@ -301,10 +302,6 @@
             </div>
     
 </div>
-
-</body>
-
-</html>
 
 </body>
 
