--- a/Botines/Nike_Tiempo_Legend_7.html
+++ b/Botines/Nike_Tiempo_Legend_7.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Nike_Tiempo_Legend_7</title>
   
 
