--- a/Mochilas/Mochila_Nike_Hayward_Futus_Azul.html
+++ b/Mochilas/Mochila_Nike_Hayward_Futus_Azul.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Mochila_Nike_Hayward_Futus_Azul</title>
   
 
