--- a/Camisetas/Camiseta_Portugal.html
+++ b/Camisetas/Camiseta_Portugal.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Camiseta_Portugal</title>
   
 
