--- a/Mochilas/Mochila_Adidas_Negro.html
+++ b/Mochilas/Mochila_Adidas_Negro.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Mochila_Adidas_Negro</title>
   
 
