--- a/Mochilas/Mochila_Puma_Szkonlny_Rojo.html
+++ b/Mochilas/Mochila_Puma_Szkonlny_Rojo.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/estilo.css">
   <title>Mochila_Puma_Szkonlny_Rojo</title>
   
 
