--- a/PaginaInicio.html
+++ b/PaginaInicio.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="css/bulma.min.css">
-  <link rel="stylesheet" href="css/FondoSportApp.css">
+  <link rel="stylesheet" href="/css/bulma.min.css">
+  <link rel="stylesheet" href="/css/fondo.css">
 
 </head>
 
