--- a/IniciarSesionSportApp.html
+++ b/IniciarSesionSportApp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> Iniciar Sésion</title>
-  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="/css/fondo.css">
   <link rel="stylesheet" href="css/bulma.min.css">
 </head>
 
