--- a/Botines.html
+++ b/Botines.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/FondoSportApp.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
   <link rel="stylesheet" href="/css/estilo.css">
+  <link rel="stylesheet" href="desktop.css"
+  media="screen and (min-width: 1280px)">
 </head>
 
 <body>
