--- a/Shorts/Short_Boca_Juniors.html
+++ b/Shorts/Short_Boca_Juniors.html
@@ -178,12 +178,9 @@
         <p class="title">ESPECIFICACIONES:</p>
         <li>Material: 100% Poliéster Reciclado.</li>
         <li>Origen: Estados Unidos.</li>
-        <div class="box1">
-          <h1>Hola</h1>
-        </div>
         </div>
         <div class="tile is-child box">
-        <div class="column is-offset-1-mobile is-offset-2-desktop">
+        <div class="column is-offset-1-mobile">
             <div class="table-container">
                 <table class="table is-bordered">
                   <thead>
@@ -241,6 +238,21 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+              <div class="box1">
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+                <h1>Hola</h1>
+               
               </div>
             </div>
           </div>
