--- a/Shorts/Short_Boca_Juniors.html
+++ b/Shorts/Short_Boca_Juniors.html
@@ -239,20 +239,50 @@
                   </tbody>
                 </table>
               </div>
-              <div class="box1">
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-                <h1>Hola</h1>
-               
+                <div class="box1">
+                  <aside class="menu">
+                    <p class="menu-label">
+                      NOSOTROS
+                    </p>
+                    <ul class="menu-list">
+                      <li><a href="">Acerca de Nosotros</a></li>
+                      <li><a href="">Nuestras Sucrsales</a></li>
+                      <li><a href="">Contacto</a></li>
+                      <li><a href="">Trábaja con Nosotros</a></li>
+                    </ul>
+                      <p class="menu-label">
+                        Transactions
+                      </p>
+                      <ul class="menu-list">
+                        <li><a href="">Efectivo</a></li>
+                        <li><a href="">Transferencias</a></li>
+                        <li><a href="">Tarjetas Debito/Credito</a></li>
+                      </ul>
+                    </aside>
+                  <div>
+                  <div>
+                    <div class="box2">
+                      <aside class="menu">
+                        <p class="menu-label">
+                          NOSOTROS
+                        </p>
+                        <ul class="menu-list">
+                          <li><a href="">Acerca de Nosotros</a></li>
+                          <li><a href="">Nuestras Sucrsales</a></li>
+                          <li><a href="">Contacto</a></li>
+                          <li><a href="">Trábaja con Nosotros</a></li>
+                        </ul>
+                          <p class="menu-label">
+                            Transactions
+                          </p>
+                          <ul class="menu-list">
+                            <li><a href="">Efectivo</a></li>
+                            <li><a href="">Transferencias</a></li>
+                            <li><a href="">Tarjetas Debito/Credito</a></li>
+                          </ul>
+                        </aside>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
