--- a/Botines/Adidas_Enfant_Silver.html
+++ b/Botines/Adidas_Enfant_Silver.html
@@ -130,14 +130,13 @@
              <figure class="image">
                 <img src="/imag/imag-Botines/6.jpg">
              </figure>
-             <div class="tile is-child box">
+             <div class="tile is-child box">   
+                <p  class="title" style="color:cornflowerblue ;">Botines Adidas Enfant Silver</p>
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">Botines Adidas Enfant Silver</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Gris/Rojo</p>
                 <br>
-                <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
                     <div class="navbar-brand">
                         <div class="navbar-item">
