--- a/Botines/Adidas_X_kids.html
+++ b/Botines/Adidas_X_kids.html
@@ -131,12 +131,11 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">Botines Adidas X kids</p>
+                <p  class="title" style="color:cornflowerblue ;">Botines Adidas X kids</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Azul/Rojo/Gris</p>
                 <br>
-                <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
                     <div class="navbar-brand">
                         <div class="navbar-item">
