--- a/Camisetas/Camiseta_Ajax.html
+++ b/Camisetas/Camiseta_Ajax.html
@@ -130,12 +130,11 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">Camiseta De Ajax Oficial</p>
+                <p  class="title" style="color:cornflowerblue ;">Camiseta De Ajax Oficial</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
                 <br>
-                <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
                     <div class="navbar-brand">
                         <div class="navbar-item">
@@ -166,9 +165,8 @@
             </nav>
         </div>
         </div>
-        <div class="tile is-child box">
-            
-            <p class=" title">DETALLES:</p>
+        <div class="tile is-child box">     
+        <p class=" title">DETALLES:</p>
         <p>Es una excelente camiseta para sacar lo que hay en vos.</p>
         <li>Logo adidas bordado.</li>
         <li>Escudo ajax aplicado.</li>
