--- a/Camisetas/Camiseta_Real_Madrid.html
+++ b/Camisetas/Camiseta_Real_Madrid.html
@@ -132,12 +132,11 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">Camiseta Real Madrid</p>
+                <p  class="title" style="color:cornflowerblue ;">Camiseta Real Madrid</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Negro/Naranja/Amarillo/Verde</p>
                 <br>
-                <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
                     <div class="navbar-brand">
                         <div class="navbar-item">
