--- a/Camisetas/Camiseta_Palmeira.html
+++ b/Camisetas/Camiseta_Palmeira.html
@@ -142,16 +142,6 @@
                         <div class="navbar-item">
                           <div class="field is-grouped">
                             <p class="control">
-                              <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
-                                <span class="icon">
-                                  <i class="fab fa-twitter"></i>
-                                </span>
-                                <span>
-                                  Tweet
-                                </span>
-                              </a>
-                            </p>
-                            <p class="control">
                               <a class="button is-primary" href="/CarritoCompras.html">
                                 <span class="icon">
                                  <i class="image">
@@ -179,7 +169,7 @@
         <li>Origen: Estados Unidos.</li>
         </div>
         <div class="tile is-child box">
-          <div class="column is-offset-1-mobile is-offset-2-desktop">
+          <div class="column is-offset-1-mobile">
               <div class="table-container">
                   <table class="table is-bordered">
                     <thead>
