--- a/Shorts/Short_Club_Arsenal.html
+++ b/Shorts/Short_Club_Arsenal.html
@@ -132,26 +132,15 @@
              </figure>
              <div class="tile is-child box">
                 <p class="subtitle" style="color:green;">FUTBOL</p>
-                <p  class="title" style="text-align:left; color:cornflowerblue ;">SHORT PUMA ARSENAL</p>
+                <p  class="title" style="color:cornflowerblue ;">SHORT PUMA ARSENAL</p>
                 <br>
                 <p class="subtitle" style="color:black ;">$12.000</p>
                 <p class="subtitle" style="color:grey ;">Blanco/Rojo</p>
                 <br>
-                <p class="title" style="color:black;">TALLE ARG:</p>
                 <nav class="navbar is-transparent">
                     <div class="navbar-brand">
                         <div class="navbar-item">
                           <div class="field is-grouped">
-                            <p class="control">
-                              <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
-                                <span class="icon">
-                                  <i class="fab fa-twitter"></i>
-                                </span>
-                                <span>
-                                  Tweet
-                                </span>
-                              </a>
-                            </p>
                             <p class="control">
                               <a class="button is-primary" href="/CarritoCompras.html">
                                 <span class="icon">
@@ -159,7 +148,7 @@
                                     <img src="/imag/carro-de-la-carretilla.png">
                                  </i>
                                 </span>
-                                <span>AGREGAR AL CARRITO ></span>
+                                <span>AGREGAR AL CARRITO</span>
                               </a>
                             </p>
                         </div>
@@ -180,7 +169,7 @@
         <li>Origen: Estados Unidos.</li>
         </div>
         <div class="tile is-child box">
-          <div class="column is-offset-1-mobile is-offset-2-desktop">
+          <div class="column is-offset-1-mobile">
               <div class="table-container">
                   <table class="table is-bordered">
                     <thead>
@@ -239,6 +228,59 @@
                     </tbody>
                   </table>
                 </div>
+                <div class="box1">
+                  <aside class="menu">
+                    <p class="menu-label">
+                      NOSOTROS
+                    </p>
+                    <ul class="menu-list">
+                      <li><a href="">Acerca de Nosotros</a></li>
+                      <li><a href="">Nuestras Sucursales</a></li>
+                      <li><a href="">Contacto</a></li>
+                      <li><a href="">Trábaja con Nosotros</a></li>
+                    </ul>
+                      <p class="menu-label">
+                        TRANSACCIONES
+                      </p>
+                      <ul class="menu-list">
+                        <li><a href="">Efectivo</a></li>
+                        <li><a href="">Transferencias</a></li>
+                        <li><a href="">Tarjetas Debito/Credito</a></li>
+                      </ul>
+                    </aside>
+                  </div>
+                    <div class="box2">
+                      <aside class="menu">
+                        <p class="menu-label">
+                          CLIENTE
+                        </p>
+                        <ul class="menu-list">
+                          <li><a href="">Mi cuenta</a></li>
+                          <li><a href="">Nueva cuenta</a></li>
+                          <li><a href="">Mi carrito</a></li>
+                        </ul>
+                        </aside>
+                  </div>
+                  <div class="box3">
+                    <aside class="menu">
+                      <p class="menu-label">
+                        NOVEDADES
+                      </p>
+                      <ul class="menu-list">
+                        <li><a href="">Ofertas</a></li>
+                        <li><a href="">Conjuntos</a></li>
+                        <li><a href="">Para vos</a></li>
+                      </ul>
+                        <p class="menu-label">
+                          INFORMACION
+                        </p>
+                        <ul class="menu-list">
+                          <li><a href="">Talles</a></li>
+                          <li><a href="">Cómo comprar</a></li>
+                          <li><a href="">Pilíticas de Cambio</a></li>
+                        </ul>
+                      </aside>
+                </div> 
               </div>
             </div>
           </div>
