--- a/Registro.html
+++ b/Registro.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="mt-5">
                         <label class="registro-datos" for="Crea Tu Contraseña"> Crea Tu Contraseña</label>
-                        <input class="input" type="password" placeholder="********">
+                        <input class="input" type="password" placeholder="*******">
                     </div>
                     <div class="mt-5 registro-CrearCuenta">
                         <a href="PaginaInicio.html" class="button is-block is-medium is-success ">Crear Cuenta</a>
