--- a/Botines.html
+++ b/Botines.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="/css/FondoSportApp.css">
   <link rel="stylesheet" href="/css/bulma.min.css">
   <link rel="stylesheet" href="/css/estilo.css">
-  <link rel="stylesheet" href="desktop.css"
-  media="screen and (min-width: 1280px)">
+  <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 1280px)">
 </head>
 
 <body>
@@ -135,7 +134,8 @@
 
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="js/botines.js"></script>
+  <script src="/js/botines.js"></script>
+  <script src="/Api/app.js"></script>
 
 
 </body>
