--- a/Camisetas.html
+++ b/Camisetas.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <nav class="navbar" role="navigation" aria-label="main navigation">
+  <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="/Camisetas.html">
         <img src="/imag/Logo/Logo.jpg" width="112" height="28">
