--- a/IniciarSesionSportApp.html
+++ b/IniciarSesionSportApp.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title> Iniciar Sésion</title>
-  <link rel="stylesheet" href="/css/fondo.css">
-  <link rel="stylesheet" href="css/bulma.min.css">
-
+  <link rel="stylesheet" href="/css/master.css">
+  <link rel="stylesheet" href="/css/bulma.min.css">
 </head>
 
 <body>
+
   <div class="container">
     <div class="columns">
       <div class="column is-one-third-desktop"></div>
@@ -27,7 +27,6 @@
             <div class="field">
               <label class="label">Constraseña</label>
               <div class="control">
-
                 <input class="input" type="password" placeholder="********">
               </div>
             </div>
