configuracion para dispositivos

--- a/IniciarSesionSportApp.html
+++ b/IniciarSesionSportApp.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="container">
-    <div class="columns">
+    <div class="columns is-half-mobile is-one-quarter-desktop">
       <div class="column is-one-third-desktop"></div>
       <div class="column has-text-centered-desktop is-one-third-desktop">
         <div class="box1">
